zig/build.log
install
+- install linux_zig
   +- compile lib linux_zig Debug native 4 errors
src/ebpf_loader.zig:8:9: error: pointless discard of local constant
    _ = fd;
        ^~
src/ebpf_loader.zig:6:27: note: used here
    defer _ = posix.close(fd);
                          ^~
src/cgroups.zig:5:21: error: root source file struct 'posix' has no member named 'open'
    const fd = posix.open(path, posix.O.WRONLY, 0) catch return -1;
               ~~~~~^~~~~
/opt/zig/lib/std/posix.zig:1:1: note: struct declared here
//! POSIX API layer.
^~~~~~~~~~~~~~~~~~~~
referenced by:
    zig_cgroup_freeze: src/root.zig:10:33
    zig_cgroup_freeze: src/root.zig:9:1
    4 reference(s) hidden; use '-freference-trace=6' to see all references
src/cgroups.zig:13:21: error: root source file struct 'posix' has no member named 'open'
    const fd = posix.open(path, posix.O.WRONLY, 0) catch return -1;
               ~~~~~^~~~~
/opt/zig/lib/std/posix.zig:1:1: note: struct declared here
//! POSIX API layer.
^~~~~~~~~~~~~~~~~~~~
src/ebpf_loader.zig:5:21: error: root source file struct 'posix' has no member named 'open'
    const fd = posix.open(program_path, posix.O.RDONLY, 0) catch return -1;
               ~~~~~^~~~~
/opt/zig/lib/std/posix.zig:1:1: note: struct declared here
//! POSIX API layer.
^~~~~~~~~~~~~~~~~~~~
error: 4 compilation errors
failed command: /opt/zig/zig build-lib -ODebug -Mroot=/home/hung/LinusAiOS/LinusAiOS/zig/src/root.zig --cache-dir .zig-cache --global-cache-dir /home/hung/.cache/zig --name linux_zig -static --zig-lib-dir /opt/zig/lib/ --listen=-

Build Summary: 0/3 steps succeeded (1 failed)
install transitive failure
+- install linux_zig transitive failure
   +- compile lib linux_zig Debug native 4 errors

error: the following build command failed with exit code 1:
.zig-cache/o/a0b2bf44366ac85572332f75bd6e24d5/build /opt/zig/zig /opt/zig/lib /home/hung/LinusAiOS/LinusAiOS/zig .zig-cache /home/hung/.cache/zig --seed 0x38990b01 -Zd13aaadb2d62d2b4
